# server

./: .gitignore  CMakeLists.txt
app/application/: CMakeLists.txt  main.cpp
app/application/common/: application.cpp  application.h
app/application/logic/maskword/: checkmaskwordmanager.cpp  checkmaskwordmanager.h  checkmaskwordresult.cpp  checkmaskwordresult.h
common/: CMakeLists.txt  define.h
common/coroutine/: corocoroutine.h  coromanager.cpp  coromanager.h  cororesult.cpp  cororesult.h  workerthread.cpp  workerthread.h
common/utils/: Singleton.h  utils.hpp  version.h
